DataReaderSun1_6_0 handles java 1.5 and java 1.4 as well